made the text bigger

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ and open the template in the editor.
       background:#000022;
       color: #fff;
       font-size: 48px;
+      font-family: ‘Arial Black’, Gadget, sans-serif;
+      font-weight: bold;
+      zoom: 150%;
       margin-top:2px;}
 
 
@@ -27,9 +30,9 @@ and open the template in the editor.
 
       display:block;
       height:48px;
-      line-height:54px;
+      line-height:50px;
       width: 100%;
-      margin-bottom:8px;
+      margin-bottom:16px;
       }
 
     .logo	{float: left;
