fixed styling for line BX

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ and open the template in the editor.
     .linie	{clear:left;
 
       display:block;
-      height:48px;
-      line-height:50px;
+      height:60px;
+      line-height:52px;
       width: 100%;
-      margin-bottom:16px;
+      margin-bottom:0px;
       }
 
     .logo	{float: left;
-      width: 48px;
+      width: 60px;
       text-align:center;
       font-weight:bold;
       color:#fff;
@@ -47,12 +47,16 @@ and open the template in the editor.
     .tid	{float:right}
 
     .A	{background-color:#1ab5f1}
-    .B	{background-color:#4dbd38}
+    .B	{background-color:#4dbd38;}
     .Bx	{background-color:#99d761}
     .C	{background-color:#f68712}
     .E	{background-color:#7c6dbe}
     .F	{background-color:#fabc09}
     .H	{background-color:#f03c1f}
+    
+    div.Bx {letter-spacing: -4px;
+      font-size:44px;
+    }
 
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
