--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ and open the template in the editor.
     
       jQuery.fn.trainInfo = function() {
         var uic = window.location.hash.split('#')[1];
-        $.post('stogdata.php', {'uic' : uic}, function(data){
+        var ts = Math.round((new Date()).getTime() / 1000);
+        $.post('stogdata.php', {'uic' : uic, 'ts' : ts}, function(data){
           $(this).themeLines(data);
         }, 'json');
 
